--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Night Sky</title>
+  <title>Alpha Network</title>
 </head>
 <body>
-  <div class="nightsky">
-    <h1>Welcome to the Night Sky</h1>
-    <p>Explore the stars and beyond</p>
-  </div>
-</body>
-</html>
+
