--- a/index.html
+++ b/index.html
@@ -3,8 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Alpha Network</title>
+  <style>
+    /* Add your styling here */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav {
+      background-color: #333;
+      padding: 10px;
+      text-align: center; /* Center the navigation bar horizontally */
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    li {
+      margin: 0;
+      padding: 0;
+    }
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+  </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="#Home">Home</a></li>
+      <li><a href="#Games">Games</a></li>
+      <li><a href="#Apps">Apps</a></li>
+      <li><a href="#Proxies">Proxies</a></li>
+      <li><a href="#Tabs">Tabs</a></li>
+      <li><a href="#Credits">Credits</a></li>
+    </ul>
+  </nav>
 
+  <!-- Your content goes here -->
+</body>
+</html>
